gcc/gcc/testsuite/algol60.dg/fail/ifstmt2.a60
'comment' { dg-do compile } ;
'begin'
  'integer' a;
  'Boolean' b, c;
  'if' b 'then' 'if' b 'then'  'comment' { dg-error "unexpected" } ;
    a := 4;
'end';
